last minute additions

--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -41,7 +41,7 @@
       width: 100%;
       box-sizing: border-box;
       margin: -32px 0 24px 0;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
     }
 
     .site-header img {
@@ -103,7 +103,7 @@
       border: 1px solid #bbb;
       border-radius: 6px;
       line-height: 1.4;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.03);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.03);
       transition: all 0.15s ease;
       font-family: inherit;
     }
@@ -115,7 +115,7 @@
     input[type="text"]:focus {
       outline: none;
       border-color: var(--concordia-burgundy);
-      box-shadow: 0 0 0 3px rgba(94,0,31,0.2);
+      box-shadow: 0 0 0 3px rgba(94, 0, 31, 0.2);
     }
 
     /* submit button */
@@ -156,7 +156,7 @@
   </style>
   <body>
     <header class="site-header">
-      <img src="concordiaEmblem.png" alt ="Concordia Emblem">
+      <img src="concordiaEmblem.png" alt="Concordia Emblem" />
     </header>
     <h1>Reset Your Password</h1>
 
@@ -164,14 +164,16 @@
       Enter your email to reset password:
       <label style="display: inline">
         <input type="text" id="gmail" placeholder="Enter gmail" />
-        <button id="submit" class="secondaryButton" type="button">Submit</button>
+        <button id="submit" class="secondaryButton" type="button">
+          Submit
+        </button>
       </label>
     </label>
 
     <script>
       document.getElementById("submit").addEventListener("click", function () {
         alert("Email has been sent!");
-        location.href = "LoginPage.html";
+        location.href = "index.html";
       });
     </script>
   </body>
