--- a/resources.html
+++ b/resources.html
@@ -1,236 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Manage Resources</title>
-  <link rel="stylesheet" href="projectStyle.css">
-  <style>
-    body {
-      background-color: #f5f5f5;
-      color: #222;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, "Helvetica Neue", Arial, sans-serif;
-      margin: 0;
-      padding: 32px;
-      line-height: 1.4;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <title>Manage Resources</title>
+    <link rel="stylesheet" href="projectStyle.css" />
+    <style>
+      body {
+        background-color: #f5f5f5;
+        color: #222;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, "Helvetica Neue", Arial, sans-serif;
+        margin: 0;
+        padding: 32px;
+        line-height: 1.4;
+      }
+      button {
+        cursor: pointer;
+        font-size: 0.9rem;
+        line-height: 1.2;
+        border-radius: 4px;
+        font-weight: 600;
+        border: none;
+        padding: 10px 16px;
+        margin-top: 6px;
+        transition: all 0.15s ease;
+      }
 
-    /* Header bar at top with Concordia colors */
-    .site-header {
-      background-color: #5e001f;           /* burgundy */
-      color: #fff;
-      border-bottom: 4px solid #c9a646;    /* gold accent */
-      padding: 12px 24px;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;         /* <-- keeps writing on the left */
-      gap: 12px;
-      margin: -32px -32px 24px -32px;      /* stretch full width since body is padded */
-    }
+      .primaryButton {
+        background-color: #5e001f;
+        color: #fff;
+        border: 1px solid #5e001f;
+      }
 
-    .site-header img {
-      height: 48px;
-      width: auto;
-    }
+      /* Header bar at top with Concordia colors */
+      .site-header {
+        background-color: #5e001f; /* burgundy */
+        color: #fff;
+        border-bottom: 4px solid #c9a646; /* gold accent */
+        padding: 12px 24px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start; /* <-- keeps writing on the left */
+        gap: 12px;
+        margin: -32px -32px 24px -32px; /* stretch full width since body is padded */
+      }
 
-    .site-header h2 {
-      font-size: 1.1rem;
-      font-weight: 500;
-      margin: 0;
-      text-align: left;                    /* <-- ensures it’s left-aligned */
-    }
+      .site-header img {
+        height: 48px;
+        width: auto;
+      }
 
-    /* "Back to Dashboard" link */
-    .back {
-      color: #5e001f;
-      font-weight: 600;
-      font-size: 0.9rem;
-      text-decoration: none;
-      background-color: #fff;
-      border: 1px solid #5e001f;
-      border-radius: 4px;
-      padding: 6px 10px;
-      display: inline-block;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.06);
-      transition: all 0.15s ease;
-      margin-bottom: 16px;
-    }
+      .site-header h2 {
+        font-size: 1.1rem;
+        font-weight: 500;
+        margin: 0;
+        text-align: left; /* <-- ensures it’s left-aligned */
+      }
 
-    .back:hover {
-      background-color: #5e001f;
-      color: #fff;
-      box-shadow: 0 4px 10px rgba(94,0,31,0.3);
-    }
+      /* "Back to Dashboard" link */
+      .back {
+        color: #5e001f;
+        font-weight: 600;
+        font-size: 0.9rem;
+        text-decoration: none;
+        background-color: #fff;
+        border: 1px solid #5e001f;
+        border-radius: 4px;
+        padding: 6px 10px;
+        display: inline-block;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.06);
+        transition: all 0.15s ease;
+        margin-bottom: 16px;
+      }
 
-    h1 {
-      color: #5e001f;
-      font-size: 1.6rem;
-      font-weight: 600;
-      margin-bottom: 16px;
-    }
+      .back:hover {
+        background-color: #5e001f;
+        color: #fff;
+        box-shadow: 0 4px 10px rgba(94, 0, 31, 0.3);
+      }
 
-    h2 {
-      color: #333;
-      font-size: 1.1rem;
-      font-weight: 600;
-      margin: 24px 0 12px 0;
-    }
+      h1 {
+        color: #5e001f;
+        font-size: 1.6rem;
+        font-weight: 600;
+        margin-bottom: 16px;
+      }
 
-    /* Form and list "cards" */
-    form,
-    .list {
-      background-color: #fff;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      max-width: 640px;
-      box-shadow: 0 10px 24px rgba(0,0,0,0.07);
-      padding: 16px 20px;
-    }
+      h2 {
+        color: #333;
+        font-size: 1.1rem;
+        font-weight: 600;
+        margin: 24px 0 12px 0;
+      }
 
-    .row {
-      display: grid;
-      grid-template-columns: 140px 1fr;
-      gap: 10px;
-      margin-bottom: 14px;
-      font-size: 0.95rem;
-      color: #333;
-      font-weight: 600;
-    }
+      /* Form and list "cards" */
+      form,
+      .list {
+        background-color: #fff;
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        max-width: 640px;
+        box-shadow: 0 10px 24px rgba(0, 0, 0, 0.07);
+        padding: 16px 20px;
+      }
 
-    .row label {
-      color: #5e001f;
-      font-weight: 600;
-      padding-top: 8px;
-      line-height: 1.3;
-    }
+      .row {
+        display: grid;
+        grid-template-columns: 140px 1fr;
+        gap: 10px;
+        margin-bottom: 14px;
+        font-size: 0.95rem;
+        color: #333;
+        font-weight: 600;
+      }
 
-    input,
-    textarea {
-      width: 100%;
-      padding: 10px 12px;
-      font-size: 0.95rem;
-      color: #222;
-      background-color: #fff;
-      border: 1px solid #bbb;
-      border-radius: 4px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.03);
-      transition: all 0.15s ease;
-      font-family: inherit;
-    }
+      .row label {
+        color: #5e001f;
+        font-weight: 600;
+        padding-top: 8px;
+        line-height: 1.3;
+      }
 
-    input:focus,
-    textarea:focus {
-      outline: none;
-      border-color: #5e001f;
-      box-shadow: 0 0 0 3px rgba(94,0,31,0.15);
-    }
+      input,
+      textarea {
+        width: 100%;
+        padding: 10px 12px;
+        font-size: 0.95rem;
+        color: #222;
+        background-color: #fff;
+        border: 1px solid #bbb;
+        border-radius: 4px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.03);
+        transition: all 0.15s ease;
+        font-family: inherit;
+      }
 
-    .actions {
-      display: flex;
-      gap: 8px;
-      flex-wrap: wrap;
-    }
+      input:focus,
+      textarea:focus {
+        outline: none;
+        border-color: #5e001f;
+        box-shadow: 0 0 0 3px rgba(94, 0, 31, 0.15);
+      }
 
-    .secondaryButton {
-      background-color: #fff;
-      color: #5e001f;
-      border: 1px solid #5e001f;
-      border-radius: 4px;
-      font-size: 0.9rem;
-      font-weight: 600;
-      line-height: 1.2;
-      padding: 8px 14px;
-      cursor: pointer;
-      transition: all 0.15s ease;
-    }
+      .actions {
+        display: flex;
+        gap: 8px;
+        flex-wrap: wrap;
+      }
 
-    .secondaryButton:hover {
-      background-color: #5e001f;
-      color: #fff;
-      box-shadow: 0 4px 10px rgba(94,0,31,0.3);
-    }
+      .secondaryButton {
+        background-color: #fff;
+        color: #5e001f;
+        border: 1px solid #5e001f;
+        border-radius: 4px;
+        font-size: 0.9rem;
+        font-weight: 600;
+        line-height: 1.2;
+        padding: 8px 14px;
+        cursor: pointer;
+        transition: all 0.15s ease;
+      }
 
-    .list {
-      padding: 16px 20px;
-    }
+      .secondaryButton:hover {
+        background-color: #5e001f;
+        color: #fff;
+        box-shadow: 0 4px 10px rgba(94, 0, 31, 0.3);
+      }
 
-    .card {
-      background-color: #fafafa;
-      border: 1px solid #eee;
-      border-radius: 6px;
-      padding: 12px 14px;
-      margin: 10px 0;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.04);
-      font-size: 0.95rem;
-      line-height: 1.4;
-    }
+      .list {
+        padding: 16px 20px;
+      }
 
-    .card strong {
-      color: #5e001f;
-      font-weight: 600;
-    }
+      .card {
+        background-color: #fafafa;
+        border: 1px solid #eee;
+        border-radius: 6px;
+        padding: 12px 14px;
+        margin: 10px 0;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.04);
+        font-size: 0.95rem;
+        line-height: 1.4;
+      }
 
-    .card em {
-      color: #444;
-      font-style: normal;
-      font-weight: 500;
-      display: inline-block;
-      margin-top: 4px;
-    }
+      .card strong {
+        color: #5e001f;
+        font-weight: 600;
+      }
 
-    .card small {
-      color: #555;
-      display: block;
-      margin-top: 4px;
-      font-size: 0.8rem;
-      line-height: 1.4;
-    }
-  </style>
-</head>
-<body>
-  <header class="site-header">
-    <img src="concordiaEmblem.png" alt ="Concordia Emblem">
-    <h2>Concordia University — Manage Resources</h2>
-  </header>
+      .card em {
+        color: #444;
+        font-style: normal;
+        font-weight: 500;
+        display: inline-block;
+        margin-top: 4px;
+      }
 
-  <a class="back" href="adminPage.html">← Back to Dashboard</a>
-  <h1>Resources</h1>
+      .card small {
+        color: #555;
+        display: block;
+        margin-top: 4px;
+        font-size: 0.8rem;
+        line-height: 1.4;
+      }
+    </style>
+  </head>
+  <body>
+    <header class="site-header">
+      <img src="concordiaEmblem.png" alt="Concordia Emblem" />
+      <h2>Concordia University — Manage Resources</h2>
+    </header>
+    <h1>Resources</h1>
 
-  <!-- Add / Edit Resource -->
-  <h2>Add / Edit Resource</h2>
-  <form>
-    <div class="row"><label>Name</label><input type="text" placeholder="e.g., Study Room A"></div>
-    <div class="row"><label>Description</label><textarea rows="3" placeholder="Short details"></textarea></div>
-    <div class="row"><label>Location</label><input type="text" placeholder="Building, Floor, Room"></div>
-    <div class="row"><label>Capacity</label><input type="number" min="1" placeholder="e.g., 6"></div>
-    <div class="actions">
-      <button class="secondaryButton">Save</button>
-      <button class="secondaryButton">Clear</button>
-    </div>
-  </form>
+    <!-- Add / Edit Resource -->
+    <h2>Add / Edit Resource</h2>
+    <form>
+      <div class="row">
+        <label>Name</label
+        ><input type="text" placeholder="e.g., Study Room A" />
+      </div>
+      <div class="row">
+        <label>Description</label
+        ><textarea rows="3" placeholder="Short details"></textarea>
+      </div>
+      <div class="row">
+        <label>Location</label
+        ><input type="text" placeholder="Building, Floor, Room" />
+      </div>
+      <div class="row">
+        <label>Capacity</label
+        ><input type="number" min="1" placeholder="e.g., 6" />
+      </div>
+      <div class="actions">
+        <button class="secondaryButton">Save</button>
+        <button class="secondaryButton">Clear</button>
+      </div>
+    </form>
 
-  <!-- Existing Resources List -->
-  <h2 style="margin-top:18px;">Existing Resources</h2>
-  <div class="list">
-    <div class="card">
-      <strong>Study Room A</strong> — Capacity 6 <br>
-      <em>H-9, Room 902</em><br>
-      <small>Description: Quiet study room with 6 seats.</small>
-      <div class="actions" style="margin-top:8px;">
-        <button class="secondaryButton">Edit</button>
-        <button class ="secondaryButton">Remove</button>
+    <!-- Existing Resources List -->
+    <h2 style="margin-top: 18px">Existing Resources</h2>
+    <div class="list">
+      <div class="card">
+        <strong>Study Room A</strong> — Capacity 6 <br />
+        <em>H-9, Room 902</em><br />
+        <small>Description: Quiet study room with 6 seats.</small>
+        <div class="actions" style="margin-top: 8px">
+          <button class="secondaryButton">Edit</button>
+          <button class="secondaryButton">Remove</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <strong>Computer Lab B</strong> — Capacity 24 <br />
+        <em>JMSB, 3rd floor</em><br />
+        <small
+          >Description: Computer lab equipped with PCs and projectors.</small
+        >
+        <div class="actions" style="margin-top: 8px">
+          <button class="secondaryButton">Edit</button>
+          <button class="secondaryButton">Remove</button>
+        </div>
       </div>
     </div>
-
-    <div class="card">
-      <strong>Computer Lab B</strong> — Capacity 24 <br>
-      <em>JMSB, 3rd floor</em><br>
-      <small>Description: Computer lab equipped with PCs and projectors.</small>
-      <div class="actions" style="margin-top:8px;">
-        <button class = "secondaryButton">Edit</button>
-        <button class="secondaryButton">Remove</button>
-      </div>
-    </div>
-  </div>
-</body>
+    <button id="goBack" class="primaryButton" type="button">
+      Go Back To Dashboard
+    </button>
+    <script>
+      document.getElementById("goBack").addEventListener("click", function () {
+        location.href = "adminPage.html";
+      });
+    </script>
+  </body>
 </html>
