--- a/specialRequest.html
+++ b/specialRequest.html
@@ -5,7 +5,6 @@
     <title>Special Request for Appointments</title>
 
     <style>
-    
       * {
         box-sizing: border-box;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -120,6 +119,7 @@
         text-align: center;
         border-top: 1px solid #ddd;
         padding: 16px;
+        display: inline-block;
         margin-top: auto;
       }
     </style>
@@ -136,15 +136,8 @@
     <main>
       <h1>Special Request for Appointments</h1>
 
-      <label for="adminName">
-        Username of Admin You Wish to Contact:
-      </label>
-      <input
-        type="text"
-        id="adminName"
-        placeholder="ex. John Doe"
-        required
-      />
+      <label for="adminName"> Username of Admin You Wish to Contact: </label>
+      <input type="text" id="adminName" placeholder="ex. John Doe" required />
 
       <label for="userText">Explain Your Request:</label>
       <textarea
@@ -162,6 +155,14 @@
       />
 
       <button id="submit" class="primaryButton" type="button">Submit</button>
+      <button
+        id="goBack"
+        class="primaryButton"
+        type="button"
+        style="float: right"
+      >
+        Go Back To Dashboard
+      </button>
     </main>
 
     <!-- Footer -->
@@ -171,6 +172,9 @@
     <script>
       document.getElementById("submit").addEventListener("click", function () {
         alert("Special Request Has Been Sent To Admin");
+        location.href = "studentPage.html";
+      });
+      document.getElementById("goBack").addEventListener("click", function () {
         location.href = "studentPage.html";
       });
     </script>
